--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RestaurantProject"
         tools:targetApi="31">
+        <activity
+            android:name=".WelcomeScreen.WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WelcomeScreen.ScreenSplash"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
