--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
-
     implementation "com.github.YarikSOffice:lingver:1.3.0"
+
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 
 }
