--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/restaurant"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RestaurantProject"
+        android:theme="@style/Theme.MyApp"
         tools:targetApi="31">
         <activity
             android:name=".OwnerScreens.ChooseLanguageActivity"
@@ -61,7 +61,7 @@
             android:exported="false" />
         <activity
             android:name=".WelcomeScreens.ScreenSplash"
-            android:theme="@style/Theme.MyApp.Splash"
+            android:theme="@style/Theme.MyApp"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
